update navigation, add git actions.

--- a/webapp/src/nav/nav.scss
+++ b/webapp/src/nav/nav.scss
@@ -3,6 +3,11 @@ nav {
     list-style: none;
     padding-inline: 0;
     margin-block: 0;
+
+    & .active {
+      text-decoration: underline;
+    }
+
     & a {
       padding: 0.4rem 1rem;
     }
