--- a/webapp/src/styles/index.scss
+++ b/webapp/src/styles/index.scss
@@ -8,7 +8,7 @@ body {
 }
 
 #root {
-  height: 100%;
+  min-height: 100%;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
