--- a/webapp/src/pages/emotionDetection/imgEmotionDetectionPage.scss
+++ b/webapp/src/pages/emotionDetection/imgEmotionDetectionPage.scss
@@ -1,21 +1,53 @@
 .img-emotion-detection {
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  gap: 0.5rem;
+  transition: all 300ms;
 
   & .main {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(420px, 520px));
+    grid-template-rows: auto;
+    gap: 0.2rem;
+    align-content: center;
+    align-items: center;
     justify-content: center;
 
     & > div {
-      padding: 0.6rem;
+      padding: 0.5rem;
       min-width: 2rem;
       min-height: 2rem;
-      background-color: rgba(0, 128, 0, 0.648);
+      box-sizing: border-box;
+
+      & > img {
+        max-width: 100%;
+        max-height: 100%;
+      }
 
       & > input {
-        margin: 1rem;
+        border-style: dashed;
+        border-radius: 0.5rem;
+        border-width: thin;
+        border-color: rgba(255, 255, 255, 0.5);
+        padding: 0.5rem;
+        width: 100%;
+        box-sizing: border-box;
+        cursor: pointer;
+        &:hover {
+          border-color: white;
+        }
+
+        &::file-selector-button {
+          font-weight: bold;
+          padding: 0.5rem 1rem;
+          border: thin solid rgba(255, 255, 255, 0.5);
+          border-radius: 0.5rem;
+          &:hover {
+            border-color: white;
+            cursor: pointer;
+          }
+        }
       }
     }
 
