add image preview - show processed image which will be used for prediction

--- a/webapp/src/pages/emotionDetection/imgEmotionDetectionPage.scss
+++ b/webapp/src/pages/emotionDetection/imgEmotionDetectionPage.scss
@@ -51,6 +51,17 @@
       }
     }
 
+    & > .left {
+      display: flex;
+      flex-direction: column;
+      box-sizing: border-box;
+      align-items: center;
+      & > canvas {
+        padding: 0.6rem;
+        max-width: 100%;
+      }
+    }
+
     & > .chart {
       min-width: 480px;
     }
