impl Object detection with ssd mobilenet v2

--- a/webapp/src/nav/nav.scss
+++ b/webapp/src/nav/nav.scss
@@ -8,8 +8,11 @@ nav {
       text-decoration: underline;
     }
 
-    & a {
-      padding: 0.8rem 1rem;
+    & > li {
+      padding: 0.3rem 0;
+      & > a {
+        padding: 1rem;
+      }
     }
   }
 }
